--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache: packages
 r:
   - bioc-devel
   - bioc-release
-warnings_are_errors: true
+warnings_are_errors: false
 
 r_github_packages:
   - jimhester/covr
