--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: r
 sudo: false
 cache: packages
 
+before_install:
+ - tlmgr install bera
+ - tlmgr install nowidow
+ - tlmgr install parnotes
+ - tlmgr install marginfix
+
 r:
   - bioc-devel
   - bioc-release
