--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,11 @@ r:
   - bioc-release
 warnings_are_errors: false
 
-r_binary_packages:
- - testthat
- - devtools
- - roxygen2
-
 r_github_packages:
   - jimhester/covr
+
+r_packages:
+ - testthat
 bioc_packages:
   - BiocCheck
 
